# scratch_ocr

./: README.md  main.py  pyproject.toml
