[tool.poetry]
name = "scratch-ocr"
version = "0.1.0"
description = ""
authors = ["Becker <rodrigo.beckermore@gmail.com>"]
readme = "README.md"
packages = [{include = "scratch_ocr"}]

[tool.poetry.dependencies]
python = "^3.10"
pytesseract = "^0.3.10"
rich = "^13.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
